--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "image-data-uri": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.23",
     "mysql": "^2.18.1",
+    "nice-invoice": "^1.0.6",
+    "pdfkit": "^0.11.0",
     "validator": "^13.5.1"
   },
   "devDependencies": {
