--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.23",
     "mysql": "^2.18.1",
+    "password-validator": "^5.1.1",
     "validator": "^13.5.1"
   },
   "devDependencies": {
@@ -19,7 +20,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js &"
+    "start": "node app.js",
+    "forever": "node app.js &"
   },
   "repository": {
     "type": "git",
