--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.23",
+    "mongoose": "^5.11.15",
     "mysql": "^2.18.1",
     "password-validator": "^5.1.1",
     "validator": "^13.5.1"
   },
   "devDependencies": {
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0"
   },
   "scripts": {
