--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.15",
     "mysql": "^2.18.1",
     "password-validator": "^5.1.1",
@@ -17,7 +19,9 @@
   },
   "devDependencies": {
     "cryptr": "^6.0.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
