--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "forever": "node app.js &"
+    "StartForEver": "forever start -c 'npm start' ./"
   },
   "repository": {
     "type": "git",
